# scran_markers

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  _formulas.tex  _formulas_dark.tex  annotated.html  block__averages_8hpp.html  block__averages_8hpp_source.html  classes.html  dir_1a621fa73d70a74a914b4a825701c566.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  namespacescran__markers.html  namespacescran__markers_1_1internal.html  score__markers__best_8hpp.html  score__markers__best_8hpp_source.html  score__markers__pairwise_8hpp.html  score__markers__pairwise_8hpp_source.html  score__markers__summary_8hpp.html  score__markers__summary_8hpp_source.html  scran__markers_8hpp.html  scran__markers_8hpp_source.html  scran_markers.tag  structscran__markers_1_1ScoreMarkersBestOptions-members.html  structscran__markers_1_1ScoreMarkersBestOptions.html  structscran__markers_1_1ScoreMarkersBestResults-members.html  structscran__markers_1_1ScoreMarkersBestResults.html  structscran__markers_1_1ScoreMarkersPairwiseBuffers-members.html  structscran__markers_1_1ScoreMarkersPairwiseBuffers.html  structscran__markers_1_1ScoreMarkersPairwiseOptions-members.html  structscran__markers_1_1ScoreMarkersPairwiseOptions.html  structscran__markers_1_1ScoreMarkersPairwiseResults-members.html  structscran__markers_1_1ScoreMarkersPairwiseResults.html  (+16 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  files_1.js  files_a.js  files_b.js  files_c.js  functions_0.js  functions_2.js  functions_4.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  (+20 more)
include/scran_markers/: PrecomputedPairwiseWeights.hpp  auc.hpp  average_group_stats.hpp  block_averages.hpp  cohens_d.hpp  create_combinations.hpp  scan_matrix.hpp  score_markers_best.hpp  score_markers_pairwise.hpp  score_markers_summary.hpp  simple_diff.hpp  summarize_comparisons.hpp  summarize_effects.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: auc.cpp  average_group_stats.cpp  block_averages.cpp  cohens_d.cpp  create_combinations.cpp  score_markers_best.cpp  score_markers_pairwise.cpp  score_markers_summary.cpp  simple_diff.cpp  summarize_comparisons.cpp  summarize_effects.cpp  utils.h
